--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-Q788K4K\\SQLEXPRESS;Database=AuthoRepo;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=DESKTOP-Q788K4K\\SQLEXPRESS;Database=AuthoRepo;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-3N07VTG\\SQLEXPRESS;Database=AuthoRepo;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True;"
   },
   "JWT": {
     "Key": "STRONGuOMARANDTALIAANDLILIAADAODAYTHENTACATION",
